HelloUltraviolet/Fixtures/RejectedSource/Expressions/IndexNonIndexable/Expected.uv
//! Expected diagnostic metadata for the IndexNonIndexable rejected-source specimen.

expectedDiagnostic("E-SEM-2527", "Index-NonIndexable")
